--- a/res/xml/config_center_navigation_category.xml
+++ b/res/xml/config_center_navigation_category.xml
@@ -40,6 +40,33 @@
         android:key="buttons_category"
         android:title="@string/buttons_category" >
 
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+             android:key="button_brightness"
+             android:title="@string/button_brightness_title"
+             android:max="255"
+             settings:min="0"
+             settings:units=""
+             android:persistent="false" />
+
+        <ListPreference
+             android:dialogTitle="@string/backlight_timeout_title"
+             android:entries="@array/backlight_timeout_entries"
+             android:entryValues="@array/backlight_timeout_values"
+             android:key="backlight_timeout"
+             android:persistent="false"
+             android:title="@string/backlight_timeout_title" />
+
+        <SwitchPreference
+            android:key="button_brightness_sw"
+            android:title="@string/button_brightness_sw_title"
+            android:persistent="false" />
+
+        <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+            android:key="button_backlight_only_when_pressed"
+            android:title="@string/button_backlight_on_touch_only_title"
+            android:summary="@string/button_backlight_on_touch_only_summary"
+            android:defaultValue="false" />
+
         <PreferenceScreen
             android:key="power_menu"
             android:title="@string/power_menu_title"
@@ -185,5 +212,6 @@
             android:title="@string/hardware_keys_double_tap_title" >
         </org.cesium.config.center.preferences.SystemSettingSwitchPreference>
     </PreferenceCategory>
-       
+      
 </PreferenceScreen> 
+	
