--- a/res/xml/config_center_navigation_category.xml
+++ b/res/xml/config_center_navigation_category.xml
@@ -41,6 +41,13 @@
         android:title="@string/buttons_category" >
 
     <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+            android:key="anbi_enabled_option"
+            android:title="@string/anbi_title"
+            android:summary="@string/anbi_summary"
+            android:defaultValue="false" />
+
+  
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
              android:key="button_brightness"
              android:title="@string/button_brightness_title"
              android:max="255"
