Radioactive: qs status bar header image [2/4]
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>
Change-Id: I258e58874634f1289d24f91278b280bb5c58f69f

--- a/res/xml/config_center_uituner_category.xml
+++ b/res/xml/config_center_uituner_category.xml
@@ -44,6 +44,12 @@
             android:summary="@string/qs_show_auto_brightness_summary"
             android:defaultValue="true" />
 
+        <Preference
+            android:key="category_custom_header"
+            android:title="@string/statusbar_header_category_title"
+            android:summary="@string/statusbar_header_category_summary"
+            android:fragment="org.cesium.config.center.fragments.StatusbarHeader" />
+
     </PreferenceCategory>
 
     <org.cesium.config.center.preferences.SystemSettingSwitchPreference
