--- a/res/values/cesium_arrays.xml
+++ b/res/values/cesium_arrays.xml
@@ -132,4 +132,15 @@
         <item>8</item>
     </string-array>
 
+    <!-- Status Bar Header -->
+    <string-array name="custom_header_provider_entries" translatable="false">
+        <item>@string/daylight_header_provider_title</item>
+        <item>@string/file_header_provider_title</item>
+    </string-array>
+
+    <string-array name="custom_header_provider_values" translatable="false">
+        <item>@string/daylight_header_provider</item>
+        <item>@string/file_header_provider</item>
+    </string-array>
+
 </resources>
