--- a/res/xml/config_center_uituner_category.xml
+++ b/res/xml/config_center_uituner_category.xml
@@ -68,6 +68,12 @@
             android:summary="@string/blur_quicksettings_subtitle"
             android:defaultValue="true" />
 
+        <Preference
+            android:key="category_custom_header"
+            android:title="@string/statusbar_header_category_title"
+            android:summary="@string/statusbar_header_category_summary"
+            android:fragment="org.cesium.config.center.fragments.StatusbarHeader" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
