--- a/res/xml/config_center_notifications_category.xml
+++ b/res/xml/config_center_notifications_category.xml
@@ -15,4 +15,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <PreferenceCategory
+        android:key="incall_vib_options"
+        android:title="@string/incall_vibration_category" >
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_connect"
+        android:title="@string/incall_vibrate_connect_title"
+        android:defaultValue="false" />
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_callwaiting"
+        android:title="@string/incall_vibrate_call_wait_title"
+        android:defaultValue="false" />
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_disconnect"
+        android:title="@string/incall_vibrate_disconnect_title"
+        android:defaultValue="false" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
