--- a/res/xml/config_center_notifications_category.xml
+++ b/res/xml/config_center_notifications_category.xml
@@ -47,10 +47,29 @@
         android:summary="@string/notification_sound_vib_screen_on_summary"
         android:defaultValue="true" />
 
-    <Preference
+    <Preference	
         android:key="charging_light"
         android:title="@string/battery_light_settings"
         android:summary="@string/battery_light_summary"
         android:fragment="org.cesium.config.center.fragments.BatteryLightSettings" />
 
-</PreferenceScreen> 
+    <PreferenceCategory
+        android:key="incall_vib_options"
+        android:title="@string/incall_vibration_category" >
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_connect"
+        android:title="@string/incall_vibrate_connect_title"
+        android:defaultValue="false" />
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_callwaiting"
+        android:title="@string/incall_vibrate_call_wait_title"
+        android:defaultValue="false" />
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="vibrate_on_disconnect"
+        android:title="@string/incall_vibrate_disconnect_title"
+        android:defaultValue="false" />
+    </PreferenceCategory>
+</PreferenceScreen>
