--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -54,4 +54,13 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
+    <!-- Heads up -->
+    <string name="notifications_category">Notifications</string>
+
+    <!-- Ambient edge lighting -->
+    <string name="ambient_light_settings_title">Ambient light</string>
+    <string name="pulse_ambient_light_title">Edge lighting</string>
+    <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
+    <string name="pulse_ambient_light_color_title">Edge light color</string>
+
 </resources>
