--- a/res/xml/config_center.xml
+++ b/res/xml/config_center.xml
@@ -80,6 +80,18 @@
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
         </Preference>
 
+    </PreferenceCategory>
+
+    <!-- Notifications -->
+    <PreferenceCategory
+        android:key="notifications_category"
+        android:title="@string/notifications_category">
+
+        <Preference
+            android:key="ambient_light_settings"
+            android:title="@string/ambient_light_settings_title"
+            android:summary="@string/pulse_ambient_light_summary"
+            android:fragment="org.cesium.config.center.fragments.AmbientLight" />
 
     </PreferenceCategory>
 
