Radioactive: Allow to disable settings dashboard suggestions [3/3]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -108,6 +108,9 @@
     <string name="enable_clear_all_button">Replace clear all text with nice button</string>
     <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
 
+    <string name="settings_suggestions">Dashboard suggestions</string>
+    <string name="settings_suggestions_summary">Enable aosp settings suggestions on main settings page\nNOTE: restart settings app to see effect</string>
+
     <!-- Fingerprint authentication vibration -->
     <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
     <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
