Radioactive: Add wallpaper color option for FOD icon [2/2]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -105,6 +105,13 @@
 
     <!-- QS category -->
     <string name="qs_category">Quick settings</string>
+
+    <!-- FOD icon use wallpaper color -->
+    <string name="fod_wallpaper_color">Use wallpaper color for FOD icon</string>
+    <string name="fod_wallpaper_color_summary">Uses adjusted primary wallpaper color for FOD icon\nNOTE: might look good only with some wallpapers</string>
+
+    <!-- Interface category -->
+    <string name="interface_category">Interface</string>
     <string name="enable_clear_all_button">Replace clear all text with nice button</string>
     <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
 
