--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,18 +18,6 @@
 -->
 <resources>
 
-    <!-- Value to pass to callback when restore button is pressed -->
-    <declare-styleable name="ColorPreference">
-        <attr name="defaultColorValue" format="integer" />
-
-    </declare-styleable>
-
-    <!-- Base attributes available to CustomSeekBarPreference. -->
-    <declare-styleable name="CustomSeekBarPreference">
-        <attr name="interval" format="integer" />
-        <attr name="showSign" format="boolean" />
-        <attr name="units" format="string|reference" />
-        <attr name="continuousUpdates" format="boolean" />
-    </declare-styleable>
+    <color name="disabled_text_color">#66000000</color>
 
 </resources>
