Radioactive: Add pref for qs brightness slider position (2/2)
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -135,5 +135,8 @@
     <string name="global_actions_emergency">Emergency</string>
     <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
     <string name="global_actions_advanced_reboot_summary">When restarting also show options for recovery and bootloader</string>
+   
+    <string name="qs_brightness_position_bottom_title">Brightness slider at bottom</string>
+    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
 
 </resources>
