--- a/res/xml/config_center_uituner.xml
+++ b/res/xml/config_center_uituner.xml
@@ -36,6 +36,14 @@
             android:summary="@string/fod_wallpaper_color_summary"
             android:defaultValue="false" />
 
+        <!-- FOD recognizing animation -->
+        <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+            android:key="fod_recognizing_animation"
+            android:title="@string/fod_recog_animation"
+            android:summary="@string/fod_recog_animation_summary"
+            android:defaultValue="false" />
+
+
     </PreferenceCategory>
 
     <PreferenceCategory
