--- a/res/xml/config_center_navigation_category.xml
+++ b/res/xml/config_center_navigation_category.xml
@@ -45,7 +45,13 @@
             android:title="@string/power_menu_title"
             android:summary="@string/power_menu_subtitle"
             android:fragment="org.cesium.config.center.fragments.PowerMenuActions" />
-      
+
+        <ListPreference
+            android:key="torch_power_button_gesture"
+            android:title="@string/torch_power_button_gesture_title"
+            android:entries="@array/torch_power_button_gesture_entries"
+            android:entryValues="@array/torch_power_button_gesture_values" />
+
         <org.cesium.config.center.preferences.SystemSettingSwitchPreference
             android:key="volume_button_music_control"
             android:summary="@string/volume_rocker_music_controls_summary"
