--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -21,6 +21,7 @@
         android:key="advanced_reboot"
         android:title="@string/advanced_reboot_title"
         android:summary="@string/advanced_reboot_summary"
+        android:dependency="advanced_reboot"
         android:defaultValue="false" />
 
     <org.cesium.config.center.preferences.SecureSettingSwitchPreference
