--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -157,6 +157,6 @@
     <string name="torch_power_button_gesture_none">Disabled</string>
     <string name="torch_power_button_gesture_dt">Double tap power button</string>
     <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
-    <string name="torch_power_button_gesture_lp">Long press power button</string>
+    <string name="torch_power_button_gesture_lp">Long press power button to enable torch</string>
 
 </resources>
