Radioactive: Add SmartPixels [2/2]
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>
Change-Id: I075d580e26dca65eec58ac35953e394e66ac7242

--- a/res/xml/config_center.xml
+++ b/res/xml/config_center.xml
@@ -44,6 +44,12 @@
         android:icon="@drawable/notifications_category_icon" />
 
     <Preference
+        android:key="battery_category"
+        android:fragment="org.cesium.config.center.fragments.Battery"
+        android:title="@string/battery_category"
+        android:icon="@drawable/battery_category_icon" />
+
+    <Preference
         android:key="navigation_category"
         android:fragment="org.cesium.config.center.fragments.NavigationFragment"
         android:title="@string/navigation_category"
