--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -25,6 +25,7 @@
     <string name="lockscreen_category">Lockscreen</string>
     <string name="uituner_category">UI tuner</string>
     <string name="notifications_category">Notifications</string>
+    <string name="battery_category">Battery</string>
     <string name="navigation_category">Navigation &amp; Buttons</string>
     <string name="about_category">About</string>
 
@@ -36,6 +37,7 @@
     <string name="interface_category">Interface</string>
     <string name="fod_category">Fingerprint on display</string>
     <string name="navbar_category">Navigation bar</string>
+    <string name="battery_title">Battery Saving</string>
     <string name="buttons_category">Buttons</string>
     <string name="links_category">Links</string>
     <string name="devs_category">Devs</string>
@@ -158,5 +160,13 @@
     <string name="torch_power_button_gesture_dt">Double tap power button</string>
     <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
     <string name="torch_power_button_gesture_lp">Long press power button to enable torch</string>
+
+    <!-- Smart Pixels -->
+    <string name="smart_pixels_title">Smart Pixels</string>
+    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
+    <string name="smart_pixels_on_power_save_title">Auto-enable on battery saver</string>
+    <string name="smart_pixels_on_power_save_summary">Enable with battery saver to increase power savings</string>
+    <string name="smart_pixels_percent">Percent of pixels to disable</string>
+    <string name="smart_pixels_shift">Burn-in protection interval</string>
 
 </resources>
