--- a/res/xml/config_center_lockscreen_category.xml
+++ b/res/xml/config_center_lockscreen_category.xml
@@ -43,6 +43,15 @@
         android:entryValues="@array/lock_clock_fonts_values"
         android:summary="@string/lock_clock_font_summary"
         android:persistent="false" />
+
+    <ListPreference
+        android:key="lock_date_fonts"
+        android:title="@string/lock_date_font_title"
+        android:dialogTitle="@string/lock_date_font_dialog_title"
+        android:entries="@array/lock_date_fonts_entries"
+        android:entryValues="@array/lock_date_fonts_values"
+        android:summary="@string/lock_date_font_summary"
+        android:persistent="false" />
 	    
     <org.cesium.config.center.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_lockscreen"
