--- a/res/xml/statusbar_header.xml
+++ b/res/xml/statusbar_header.xml
@@ -54,6 +54,14 @@
             android:dependency="status_bar_custom_header" >
         </Preference>
 
+        <org.cesium.config.center.preferences.SystemSettingSeekBarPreference
+            android:key="status_bar_custom_header_height"
+            android:title="@string/status_bar_custom_header_height_title"
+            android:max="100"
+            settings:min="0"
+            android:defaultValue="25"
+            settings:units="dp" />
+
         <org.cesium.config.center.preferences.CustomSeekBarPreference
             android:key="status_bar_custom_header_shadow"
             android:title="@string/status_bar_custom_header_shadow_title"
