Radioactive: Global Actions with Advanced Reboot [2/2]
Co-authored-by: merser2005 <merser2005@gmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/xml/config_center_navigation_category.xml
+++ b/res/xml/config_center_navigation_category.xml
@@ -39,6 +39,12 @@
     <PreferenceCategory
         android:key="buttons_category"
         android:title="@string/buttons_category" >
+
+        <PreferenceScreen
+            android:key="power_menu"
+            android:title="@string/power_menu_title"
+            android:summary="@string/power_menu_subtitle"
+            android:fragment="org.cesium.config.center.fragments.PowerMenuActions" />
       
         <org.cesium.config.center.preferences.SystemSettingSwitchPreference
             android:key="volume_button_music_control"
