--- a/res/xml/config_center_lockscreen_category.xml
+++ b/res/xml/config_center_lockscreen_category.xml
@@ -15,6 +15,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="fingerprint_success_vib"
+        android:title="@string/fprint_sucess_vib_title"
+        android:summary="@string/fprint_sucess_vib_summary"
+        android:defaultValue="true" />
+
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="fingerprint_error_vib"
+        android:title="@string/fprint_error_vib_title"
+        android:summary="@string/fprint_error_vib_summary"
+        android:defaultValue="true" />
+
+
     <Preference
         android:title="@string/lockscreen_tuner_title"
         android:summary="@string/lockscreen_tuner_summary" >
