--- a/res/xml/config_center.xml
+++ b/res/xml/config_center.xml
@@ -93,6 +93,13 @@
             android:summary="@string/pulse_ambient_light_summary"
             android:fragment="org.cesium.config.center.fragments.AmbientLight" />
 
+        <ListPreference
+            android:key="heads_up_time_out"
+            android:title="@string/heads_up_time_out_title"
+            android:entries="@array/heads_up_time_out_entries"
+            android:entryValues="@array/heads_up_time_out_values"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
