--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -82,4 +82,7 @@
     <string name="set">Set</string>
     <string name="color_default">Default</string>
 
+    <string name="qs_bg_use_new_tint">QS tile colors</string>
+    <string name="qs_bg_use_new_tint_summary">Use accent color for qs tile icons and background</string>
+
 </resources>
