Radioactive: Add volume panel on left toggle
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/xml/config_center_navigation_category.xml
+++ b/res/xml/config_center_navigation_category.xml
@@ -52,6 +52,12 @@
             android:title="@string/volume_rocker_music_controls_title"
             android:defaultValue="false" />
 
+        <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+            android:key="volume_panel_on_left"
+            android:title="@string/volume_panel_on_left_title"
+            android:defaultValue="false"
+            settings:controller="org.cesium.config.center.fragments.VolumePanelOnLeftPreferenceController"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen> 
