Radioactive: Allow hiding auto brightness toggle [2/2]
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/xml/config_center_uituner_category.xml
+++ b/res/xml/config_center_uituner_category.xml
@@ -31,6 +31,12 @@
             android:summary="@string/qs_brightness_position_bottom_summary"
             android:defaultValue="false" />
 
+        <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+            android:key="qs_show_auto_brightness"
+            android:title="@string/qs_show_auto_brightness_title"
+            android:summary="@string/qs_show_auto_brightness_summary"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
     <org.cesium.config.center.preferences.SystemSettingSwitchPreference
