--- a/res/xml/config_center_uituner_category.xml
+++ b/res/xml/config_center_uituner_category.xml
@@ -32,6 +32,13 @@
             android:defaultValue="false" />
 
         <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+            android:key="qs_show_brightness_above_footer"
+            android:title="@string/qs_show_brightness_above_footer_title"
+            android:summary="@string/qs_show_brightness_above_footer_summary"
+            android:dependency="qs_brightness_position_bottom"
+            android:defaultValue="false" />
+
+        <org.cesium.config.center.preferences.SystemSettingSwitchPreference
             android:key="qs_show_auto_brightness"
             android:title="@string/qs_show_auto_brightness_title"
             android:summary="@string/qs_show_auto_brightness_summary"
