Radioactive: Status network traffic [2/2]
arrow-edits:
 - migrate to androidx

Change-Id: I1769659ce44be6be0187757627b82a8dabbc743d

--- a/res/xml/config_center_statusbar_category.xml
+++ b/res/xml/config_center_statusbar_category.xml
@@ -66,4 +66,10 @@
 
     </PreferenceCategory>
 
+    <Preference
+        android:key="traffic_category"
+        android:title="@string/traffic_title"
+        android:summary="@string/traffic_summary"
+        android:fragment="org.cesium.config.center.fragments.TrafficIndicators"/>
+
 </PreferenceScreen> 
