--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -48,10 +48,10 @@
         android:title="@string/global_actions_lockdown"
         android:defaultValue="false" />
 
-    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+    <!--<org.cesium.config.center.preferences.SystemSettingSwitchPreference
         android:key="global_actions_flashlight"
         android:title="@string/global_actions_flashlight"
-        android:defaultValue="false" />
+        android:defaultValue="false" />-->
 
     <org.cesium.config.center.preferences.SystemSettingSwitchPreference
         android:key="global_actions_users"
