Radioactive: allow to switch back to pre P mobile type icon style [2/2]
Change-Id: Id77f366331a1e19feaf6cded3403abf1efacf45e

--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -228,4 +228,8 @@
     <string name="clock_date_left">Left of time</string>
     <string name="clock_date_position">Date position</string>
 
+    <!-- Old Mobile Type Icons -->
+    <string name="use_old_mobiletype_title">Old mobiletype</string>
+    <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (SystemUI reboot required)</string>
+
 </resources>
