--- a/res/xml/config_center_statusbar_category.xml
+++ b/res/xml/config_center_statusbar_category.xml
@@ -33,6 +33,13 @@
         android:summary="@string/show_fourg_icon_summary"
         android:defaultValue="false"/>
 
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="use_old_mobiletype"
+        android:title="@string/use_old_mobiletype_title"
+        android:summary="@string/use_old_mobiletype_summary"
+        android:defaultValue="false" />
+
+
         <Preference
             android:key="statusbar_battery"
             android:title="@string/battery_percent_title"
