--- a/res/xml/config_center_statusbar_category.xml
+++ b/res/xml/config_center_statusbar_category.xml
@@ -27,17 +27,23 @@
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
         </Preference>
 
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="show_fourg_icon"
+        android:title="@string/show_fourg_icon_title"
+        android:summary="@string/show_fourg_icon_summary"
+        android:defaultValue="false"/>
+
         <Preference
             android:key="statusbar_battery"
             android:title="@string/battery_percent_title"
             android:summary="@string/battery_percent_summary"
             android:fragment="org.cesium.config.center.fragments.StatusbarBatterySettings"/>
 
-    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
-        android:key="show_fourg_icon"
-        android:title="@string/show_fourg_icon_title"
-        android:summary="@string/show_fourg_icon_summary"
-        android:defaultValue="false"/>
+    <PreferenceScreen
+        android:key="clock_options_category"
+        android:fragment="org.cesium.config.center.fragments.ClockOptions"
+        android:title="@string/clock_options_title"
+        android:summary="@string/clock_options_summary" />
 
     </PreferenceCategory>
 
