--- a/res/xml/config_center_statusbar_category.xml
+++ b/res/xml/config_center_statusbar_category.xml
@@ -27,6 +27,12 @@
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
         </Preference>
 
+        <Preference
+            android:key="statusbar_battery"
+            android:title="@string/battery_percent_title"
+            android:summary="@string/battery_percent_summary"
+            android:fragment="org.cesium.config.center.fragments.StatusbarBatterySettings"/>
+
     <org.cesium.config.center.preferences.SystemSettingSwitchPreference
         android:key="show_fourg_icon"
         android:title="@string/show_fourg_icon_title"
