--- a/res/xml/config_center_uituner_category.xml
+++ b/res/xml/config_center_uituner_category.xml
@@ -58,4 +58,11 @@
         android:summary="@string/notification_headers_summary"
         android:defaultValue="true" />
 
+    <org.cesium.config.center.preferences.SystemSettingSwitchPreference
+        android:key="center_notification_headers"
+        android:title="@string/center_notification_headers_title"
+        android:summary="@string/center_notification_headers_summary"
+        android:dependency="notification_headers"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
