Radioactive: Add donations preference
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>
Change-Id: I95b1504d94dad828346f737d1f7f6d22de3b4f47

--- a/res/xml/config_center_about_category.xml
+++ b/res/xml/config_center_about_category.xml
@@ -46,6 +46,15 @@
                 android:data="https://t.me/CesiumOS_Community"/>
         </Preference>
 
+        <Preference
+            android:title="@string/donation_link"
+            android:summary="@string/donation_link_summary"
+            android:icon="@drawable/donation_icon">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://www.paypal.com/paypalme/cesiumpenguin"/>
+        </Preference>
+
     </PreferenceCategory>
 
     <PreferenceCategory
