Radioactive: Update maintainer list
- Also, rearrange alphabetically {devices}

Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>
Change-Id: I65baf68c18ee011c49c2d5d7e79645d8602d2fef

--- a/res/values/cesium_strings.xml
+++ b/res/values/cesium_strings.xml
@@ -40,7 +40,7 @@
     <string name="battery_title">Battery Saving</string>
     <string name="buttons_category">Buttons</string>
     <string name="links_category">Links</string>
-    <string name="devs_category">Devs</string>
+    <string name="devs_category">Team</string>
     <string name="maintainers_category">Maintainers</string>
 
     <!-- About section -->
